# AgentEvaluationObservability

./: .gitignore  README.md  SCENARIO.md  prompt.txt
.github/workflows/: agent.yaml  infra.yaml  load_data.yaml  mcp.yaml  trace.yaml
agents/: main.py  prompt.txt  pyproject.toml
agents/evaluations/: __init__.py  criteria.py
dataset/: pyproject.toml
dataset/faq/: main.py
dataset/internal_investment/: main.py
dataset/product_sheet/: main.py
docs/: README.md
docs/cicd/: README.md
docs/deployment/: README.md
docs/evaluation/: README.md
docs/operations/: README.md
docs/overview/: README.md
evaluation/: agent_evaluation.ipynb  generate_trace.ipynb  requirements.txt
evaluation/dataset/: cicd.json  clients_evaluation.jsonl  dataset.json
infra/: bicepconfig.json  main.bicep  main.bicepparam
infra/core/RBAC/: acr.bicep
infra/core/ai/: foundry.bicep  foundry.connection.bicep  search.bicep
infra/core/container/: registry.bicep
infra/core/data/: cosmos.bicep  storage.bicep
infra/core/monitoring/: monitor.bicep
infra/core/web/: web.bicep  webfarm.bicep
scripts/: subscription-key.ps1
src/wealth-data-mcp/: Dockerfile  README.md  dependencies.py  gunicorn.conf.py  main.py  pyproject.toml
src/wealth-data-mcp/data/: README.md  clients.json  funds.json
src/wealth-data-mcp/infrastructure/: enum.py
src/wealth-data-mcp/middlewares/: __init__.py  subscription.py
src/wealth-data-mcp/models/: fund.py  (+4 more)
utility/: generate_trace.py  load_data.py  pyproject.toml
utility/data/: clients.json  multi_turns_conversation.json
video/: create_video.py
(+7 files in other folders)
