[project]
name = "utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.9.0",
    "azure-ai-projects>=2.2.0",
    "azure-cosmos>=4.16.1",
    "azure-identity>=1.25.3",
    "python-dotenv>=1.2.2",
]

[tool.uv]
prerelease = "allow"